@@ -1,4 +1,5 @@
 import server
+import requests
 
 class FakeConnection(object):
     """
@@ -27,14 +28,60 @@ class FakeConnection(object):
 
 # Test a basic GET call.
 
-def test_handle_connection():
+def testHandleConnectionHomepage():
     conn = FakeConnection("GET / HTTP/1.0\r\n\r\n")
     expected_return = 'HTTP/1.0 200 OK\r\n' + \
                       'Content-type: text/html\r\n' + \
                       '\r\n' + \
-                      '<h1>Hello, world.</h1>' + \
-                      'This is ctb\'s Web server.'
+                      '<h1>Home</h1>' + \
+                      '<p><a href=\"http://test:0/content\">Content</a></p>' + \
+                      '<p><a href=\"http://test:0/file\">File</a></p>' + \
+                      '<p><a href=\"http://test:0/image\">Image</a></p>'
 
-    server.handle_connection(conn)
+    server.handleConnection(conn,"test",0)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def testHandleConnectionContent():
+    conn = FakeConnection("GET /content HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>Content Page</h1>' + \
+                      '<p><a href=\"http://test:0/\">Home</a></p>'
+
+    server.handleConnection(conn,"test",0)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def testHandleConnectionFile():
+    conn = FakeConnection("GET /file HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>File Page</h1>' + \
+                      '<p><a href=\"http://test:0/\">Home</a></p>'
+
+    server.handleConnection(conn,"test",0)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def testHandleConnectionImage():
+    conn = FakeConnection("GET /image HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>Image Page</h1>' + \
+                      '<p><a href=\"http://test:0/\">Home</a></p>'
+
+    server.handleConnection(conn,"test",0)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def testHandleConnectionPost():
+    conn = FakeConnection("POST / HTTP/1.0\r\n\r\n")
+    expected_return = 'Hello, World.'
+
+    server.handleConnection(conn,"test",0)
 
     assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
